[workspace]
resolver = "2"

members = [
    # Settings Plugin SDK
    "bottlerocket-settings-plugin",
    "bottlerocket-settings-derive",
    "bottlerocket-defaults-helper",

    # Public API for Bottlerocket settings models
    "bottlerocket-settings-models/settings-models",

    # Useful libraries for constructing settings models
    "bottlerocket-settings-models/model-derive",
    "bottlerocket-settings-models/modeled-types",
    "bottlerocket-settings-models/scalar",
    "bottlerocket-settings-models/scalar-derive",
    "bottlerocket-settings-models/string-impls-for",

    # Settings extensions
    # These will eventually live in the kit workspaces that own the related software
    "bottlerocket-settings-models/settings-extensions/autoscaling",
    "bottlerocket-settings-models/settings-extensions/aws",
    "bottlerocket-settings-models/settings-extensions/bootstrap-containers",
    "bottlerocket-settings-models/settings-extensions/cloudformation",
    "bottlerocket-settings-models/settings-extensions/container-registry",
    "bottlerocket-settings-models/settings-extensions/container-runtime",
    "bottlerocket-settings-models/settings-extensions/dns",
    "bottlerocket-settings-models/settings-extensions/ecs",
    "bottlerocket-settings-models/settings-extensions/host-containers",
    "bottlerocket-settings-models/settings-extensions/kernel",
    "bottlerocket-settings-models/settings-extensions/kubernetes",
    "bottlerocket-settings-models/settings-extensions/metrics",
    "bottlerocket-settings-models/settings-extensions/motd",
    "bottlerocket-settings-models/settings-extensions/network",
    "bottlerocket-settings-models/settings-extensions/ntp",
    "bottlerocket-settings-models/settings-extensions/nvidia-container-runtime",
    "bottlerocket-settings-models/settings-extensions/oci-defaults",
    "bottlerocket-settings-models/settings-extensions/oci-hooks",
    "bottlerocket-settings-models/settings-extensions/pki",
    "bottlerocket-settings-models/settings-extensions/updates",

    # Settings Extension SDK
    # Currently unused in Bottlerocket
    "bottlerocket-settings-sdk",
    "bottlerocket-template-helper",
]

[workspace.dependencies]
bottlerocket-settings-plugin = { path = "./bottlerocket-settings-plugin", version = "0.1" }
bottlerocket-settings-derive = { path = "./bottlerocket-settings-derive", version = "0.1" }
bottlerocket-settings-sdk = { path = "./bottlerocket-settings-sdk", version = "0.1" }
bottlerocket-defaults-helper = { path = "./bottlerocket-defaults-helper", version = "0.1" }
bottlerocket-template-helper = { path = "./bottlerocket-template-helper", version = "0.1" }

# Settings Models
bottlerocket-model-derive = { path = "./bottlerocket-settings-models/model-derive", version = "0.1" }
bottlerocket-modeled-types = { path = "./bottlerocket-settings-models/modeled-types", version = "0.2" }
bottlerocket-scalar = { path = "./bottlerocket-settings-models/scalar", version = "0.1" }
bottlerocket-scalar-derive = { path = "./bottlerocket-settings-models/scalar-derive", version = "0.1" }
bottlerocket-string-impls-for = { path = "./bottlerocket-settings-models/string-impls-for", version = "0.1" }

## Settings Extensions
settings-extension-autoscaling = { path = "./bottlerocket-settings-models/settings-extensions/autoscaling", version = "0.1" }
settings-extension-aws = { path = "./bottlerocket-settings-models/settings-extensions/aws", version = "0.1" }
settings-extension-bootstrap-containers = { path = "./bottlerocket-settings-models/settings-extensions/bootstrap-containers", version = "0.1" }
settings-extension-cloudformation = { path = "./bottlerocket-settings-models/settings-extensions/cloudformation", version = "0.1" }
settings-extension-container-registry = { path = "./bottlerocket-settings-models/settings-extensions/container-registry", version = "0.1" }
settings-extension-container-runtime = { path = "./bottlerocket-settings-models/settings-extensions/container-runtime", version = "0.1" }
settings-extension-dns = { path = "./bottlerocket-settings-models/settings-extensions/dns", version = "0.1" }
settings-extension-ecs = { path = "./bottlerocket-settings-models/settings-extensions/ecs", version = "0.1" }
settings-extension-host-containers = { path = "./bottlerocket-settings-models/settings-extensions/host-containers", version = "0.1" }
settings-extension-kernel = { path = "./bottlerocket-settings-models/settings-extensions/kernel", version = "0.1" }
settings-extension-kubernetes = { path = "./bottlerocket-settings-models/settings-extensions/kubernetes", version = "0.1" }
settings-extension-metrics = { path = "./bottlerocket-settings-models/settings-extensions/metrics", version = "0.1" }
settings-extension-motd = { path = "./bottlerocket-settings-models/settings-extensions/motd", version = "0.1" }
settings-extension-network = { path = "./bottlerocket-settings-models/settings-extensions/network", version = "0.1" }
settings-extension-ntp = { path = "./bottlerocket-settings-models/settings-extensions/ntp", version = "0.1" }
settings-extension-nvidia-container-runtime = { path = "./bottlerocket-settings-models/settings-extensions/nvidia-container-runtime", version = "0.1" }
settings-extension-oci-defaults = { path = "./bottlerocket-settings-models/settings-extensions/oci-defaults", version = "0.1" }
settings-extension-oci-hooks = { path = "./bottlerocket-settings-models/settings-extensions/oci-hooks", version = "0.1" }
settings-extension-pki = { path = "./bottlerocket-settings-models/settings-extensions/pki", version = "0.1" }
settings-extension-updates = { path = "./bottlerocket-settings-models/settings-extensions/updates", version = "0.1" }

abi_stable = "0.11.3"
anyhow = "1"
argh = "0.1"
base64 = "0.21"
ctor = "0.2"
darling = "0.20"
env_logger = "0.11"
indexmap = "2"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
maplit = "1"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
regex = "1"
semver = "1"
serde = "1"
serde_json = "1"
serde_plain = "1"
snafu = "0.8"
syn = { version = "2", default-features = false }
toml = "0.8"
tracing = "0.1"
url = "2"
walkdir = "2"
x509-parser = "0.16"

[workspace.lints.clippy]
indexing_slicing = "deny"
