[package]
name = "bottlerocket-defaults-helper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
readme = "../README.md"
authors = [
  "Tom Kirchner <tjk@amazon.com>",
  "Matt Briggs <brigmatt@amazon.com>",
  "Ben Cressey <bcressey@amazon.com>",
]

[dependencies]
snafu.workspace = true
toml.workspace = true
walkdir.workspace = true

[lints]
workspace = true
