[package]
name = "bottlerocket-settings-plugin"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
readme = "../README.md"

[dependencies]
abi_stable = "0.11.3"
lazy_static = "1.4.0"
serde = "1.0.198"
serde_json = "1.0.116"
bottlerocket-settings-derive.workspace = true
