[package]
name = "bottlerocket-settings-plugin"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
readme = "../README.md"

[dependencies]
abi_stable.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
bottlerocket-settings-derive.workspace = true

[lints]
workspace = true
