[package]
name = "bottlerocket-settings-sdk"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
readme = "../README.md"

[dependencies]
argh.workspace = true
bottlerocket-template-helper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
anyhow.workspace = true
ctor.workspace = true
env_logger.workspace = true
log.workspace = true
maplit.workspace = true

[features]
default = ["extension", "proto1"]

# If extension is disabled, only the models structures are avalable.
extension = []

# Enable Bottlerocket settings extensions CLI proto1.
proto1 = []

[lints]
workspace = true
