[package]
name = "bottlerocket-template-helper"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn = { workspace = true, features = ["full", "parsing", "printing", "proc-macro", "visit-mut"] }


[dev-dependencies]
anyhow.workspace = true
bottlerocket-settings-sdk.workspace = true

[lints]
workspace = true
