[package]
name = "bottlerocket-model-derive"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = "0.20"
quote = "1"
syn = { version = "2", default-features = false, features = ["full", "parsing", "printing", "proc-macro", "visit-mut"] }
