[package]
name = "bottlerocket-model-derive"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "parsing", "printing", "proc-macro", "visit-mut"] }

[lints]
workspace = true
