[package]
name = "bottlerocket-modeled-types"
version = "0.2.0"
authors = []
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
bottlerocket-scalar.workspace = true
bottlerocket-scalar-derive.workspace = true
bottlerocket-string-impls-for.workspace = true
bottlerocket-model-derive.workspace = true
base64 = "0.21"
indexmap = { version = "2", features = ["serde"] }
lazy_static = "1"
regex = "1"
semver = "1"
serde = "1"
serde_json = "1"
serde_plain = "1"
snafu = "0.8"
url = "2"
x509-parser = "0.16"
