[package]
name = "bottlerocket-modeled-types"
version = "0.5.0"
authors = []
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
bottlerocket-scalar.workspace = true
bottlerocket-scalar-derive.workspace = true
bottlerocket-string-impls-for.workspace = true
bottlerocket-model-derive.workspace = true
base64.workspace = true
indexmap = { workspace = true, features = ["serde"] }
lazy_static.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
snafu.workspace = true
url.workspace = true
x509-parser.workspace = true

[lints]
workspace = true
