[package]
name = "bottlerocket-scalar-derive"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
bottlerocket-scalar.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_plain.workspace = true
syn = { workspace = true, features = ["full", "parsing", "printing", "proc-macro", "visit-mut"] }

[lints]
workspace = true
