[package]
name = "bottlerocket-settings-models"
version = "0.2.0"
authors = ["Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
libc = "0.2"
bottlerocket-model-derive.workspace = true
bottlerocket-modeled-types.workspace = true
bottlerocket-scalar.workspace = true
bottlerocket-scalar-derive.workspace = true
bottlerocket-string-impls-for.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# settings extensions
settings-extension-autoscaling.workspace = true
settings-extension-aws.workspace = true
settings-extension-bootstrap-containers.workspace = true
settings-extension-cloudformation.workspace = true
settings-extension-container-registry.workspace = true
settings-extension-container-runtime.workspace = true
settings-extension-dns.workspace = true
settings-extension-ecs.workspace = true
settings-extension-host-containers.workspace = true
settings-extension-kernel.workspace = true
settings-extension-metrics.workspace = true
settings-extension-motd.workspace = true
settings-extension-network.workspace = true
settings-extension-ntp.workspace = true
settings-extension-oci-defaults.workspace = true
settings-extension-oci-hooks.workspace = true
settings-extension-pki.workspace = true
settings-extension-updates.workspace = true
