[package]
name = "bottlerocket-string-impls-for"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>", "Sean P. Kelly <seankell@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
serde.workspace = true

[lints]
workspace = true
