[package]
name = "settings-extension-host-containers"
version = "0.1.0"
authors = ["Gaurav Sharma <mgsharm@amazon.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
bottlerocket-modeled-types.workspace = true
bottlerocket-model-derive.workspace = true
bottlerocket-settings-sdk.workspace = true
env_logger.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
