[package]
name = "settings-extension-kubernetes"
version = "0.1.0"
authors = ["Sean P. Kelly <seankell@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[features]
# With the 'nvidia-device-plugin' feature enabled, the compilation
# includes NVIDIA GPU-related code, for instance, NvidiaDevicePluginSettings.
nvidia-device-plugin = []

[dependencies]
bottlerocket-modeled-types.workspace = true
bottlerocket-model-derive.workspace = true
bottlerocket-settings-sdk.workspace = true
env_logger.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true

[dev-dependencies]
settings-extension-kubernetes = { workspace = true, features = ["nvidia-device-plugin"] }
