[package]
name = "settings-extension-motd"
version = "0.1.0"
authors = ["Sean P. Kelly <seankell@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
bottlerocket-settings-sdk = { path = "../../../bottlerocket-settings-sdk", version = "0.1" }
bottlerocket-string-impls-for = { version = "0.1", path = "../../string_impls_for" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
