[package]
name = "settings-extension-motd"
version = "0.1.0"
authors = ["Sean P. Kelly <seankell@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
bottlerocket-settings-sdk.workspace = true
bottlerocket-string-impls-for.workspace = true
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
