[package]
name = "settings-extension-updates"
version = "0.1.0"
authors = ["Sam Berning <bernings@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[dependencies]
bottlerocket-settings-sdk.workspace = true
bottlerocket-modeled-types.workspace = true
bottlerocket-model-derive.workspace = true
env_logger = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
